# adventOfCode2023

./: Readme.md
aoc23/: prepareNextDay.sh
aoc23/lib/: cards.ml  dune  galaxies.ml  gardener.ml  nonogram1d.ml  pipeline.ml  predictor.ml  raceboat.ml  themap.ml  utilities.ml
aoc23/test/: dune  test_aoc23_01.ml  test_aoc23_02.ml  test_aoc23_03.ml  test_aoc23_05.ml  test_aoc23_06.ml  test_aoc23_07.ml  test_aoc23_08.ml  test_aoc23_09.ml  test_aoc23_10.ml  test_aoc23_11.ml  test_aoc23_12.ml  test_utilities.ml
aoc23_01/: dune-project
aoc23_01/lib/: dune  puzzle.ml
aoc23_01/test/: ad01_trebuchet.ml  dune
aoc23_02/: dune-project
aoc23_02/lib/: bagOcubes.ml  dune
aoc23_02/test/: dune  test_aoc23_02.ml
aoc23_03/: dune-project
aoc23_03/lib/: day3input.ml  dune  schematics.ml
aoc23_03/test/: dune  test_aoc23_03.ml
aoc23_04/: dune-project
aoc23_04/lib/: dune  scratcher.ml
aoc23_04/test/: dune  test_aoc23_04.ml
aoc23_05/: dune-project
aoc23_05/lib/: dune
aoc23_05/test/: dune  test_aoc23_05.ml
