(library
 (name trebuchet)
 (modules trebuchet)
 (libraries str))

(library
 (name bagOcubes)
 (modules bagOcubes)
 (libraries str fmt))

(library
 (name schematics)
 (modules Schematics)
 (libraries str))

(library
 (modules Day3input)
 (name day3input))

(library
 (name scratcher)
 (modules scratcher)
 (libraries fmt))

(library
 (name gardener)
 (modules gardener)
 (libraries fmt))

(library
 (name utilities)
 (modules utilities))
