(library
 (name utilities)
 (modules utilities))

(library
 (name trebuchet)
 (modules trebuchet)
 (libraries str))

(library
 (name bagOcubes)
 (modules bagOcubes)
 (libraries str fmt))

(library
 (name schematics)
 (modules Schematics)
 (libraries str))

(library
 (modules Day3input)
 (name day3input))

(library
 (name scratcher)
 (modules scratcher)
 (libraries fmt))

(library
 (name gardener)
 (modules gardener)
 (libraries fmt))

(library
 (name raceboat)
 (modules raceboat))

(library
 (name cards)
 (modules cards)
 (libraries utilities))

(library
 (name themap)
 (modules themap)
 (libraries utilities str))

(library
 (name predictor)
 (modules predictor))

(library
 (name pipeline)
 (modules pipeline)
 (libraries fmt utilities))

(library
 (name galaxies)
 (modules galaxies))
